--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "license": "MIT",
   "dependencies": {
     "@auth0/nextjs-auth0": "^0.15.0",
+    "@material-ui/core": "^4.11.2",
     "blake2": "^4.0.2",
     "dotenv": "^8.2.0",
+    "isomorphic-fetch": "^3.0.0",
     "isomorphic-unfetch": "^3.0.0",
+    "material-icons": "^0.5.1",
     "next": "^9.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "swr": "^0.3.9",
     "utf8": "^3.0.0"
   }
 }
